fix: Get quick add shortcut working again chore: Update gradle